--- a/The Space Station Project/index.html
+++ b/The Space Station Project/index.html
@@ -4,7 +4,7 @@
 		<title>Basic HTML</title>
 		<meta charset="utf-8">
 	</head>
-	
+	<body>
 		<header>
 			<h1>The Basic HTML Template</h1>
 			<p>Introduction to basic HTML syntax.</P.
