--- a/The Space Station Project/index.html
+++ b/The Space Station Project/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>
 			<h1>The Basic HTML Template</h1>
-			<p>Introduction to basic HTML syntax.</P.
+			<p>Introduction to basic HTML syntax.</P>
 		</header>
 		
 	</body>
