--- a/The Space Station Project/index.html
+++ b/The Space Station Project/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Space Station | Resort</title>
+		<link rel="stylesheet" href="">
 	</head>
 	<body>
 	
