change file names. create new index page
Change css file name from shared to shares. Started new index.html document. start new css document.

--- a/The Space Station Project/space_station.html
+++ b/The Space Station Project/space_station.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Basic HTML Template</title> 
-		<link rel="stylesheet" href="./css/basic_style.css">
+		<title>The Space Station</title> 
+        <link rel="stylesheet" href="./CSS/shares.css">
+        <link rel="stylesheet" href="./CSS/animations.css">
 	</head>
 	<body>
 	
@@ -149,13 +150,40 @@
 
 		<!--RSVP-->
 		<section id="contact">
+            <div class="container">
+                <div class="heading-padding">
+                    <h1 class="heading-padding">Reservation</h1>
+                    <div class="reservation">
+                        <h2><span>Your adventure is just around the moon.</span>
+                            <br/>Reserve you flight today!
+                        </h2>
+                        <p class="rsvp-text">
+                            Please provide us with your basic contact information.
+                        </p>
+                        <div class="form-rsvp">
+                            <form action="" method="post">
+                                <input class="rsvp" type="text" value="" placeholder="First Name">
+                                <input class="rsvp" type="text" value="" placeholder="Last Name"> 
+                                <input class="rsvp" type="text" value="" placeholder="Email Address">
+                                <input class="rsvp" type="text" value="" placeholder="Phone Number"> 
+                                <div class="form-spacer">
+                                    <label class="terms">Terms and Conditions</label>
+                                </div>         
+                                <div class="submit">
+                                    <input type="submit" value="Submit">
+                                </div>                                                                                     
+                            </form>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
 		</section>
 		<!--END RSVP-->
 
 		<!-- FOOTER -->
 		<div id="footer">
-
+            www.thespacestation.space &nbsp; &nbsp; &nbsp; &copy; 2019
 		</div>
 		<!--END FOOTER-->
 	</body>
