--- a/The Space Station Project/index.html
+++ b/The Space Station Project/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>The Space Station | Resort</title>
 		<link rel="stylesheet" href="">
+		<link rel="stylesheet" href="">
 	</head>
 	<body>
 	
