--- a/The Space Station Project/space_station.html
+++ b/The Space Station Project/space_station.html
@@ -42,7 +42,7 @@
 							<img src="./images/thumb/thumbnail_1.png" alt="">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to Enlarge</h3>
-								<p>We have serveral space launches departing daily, book your flight today!</p>
+								<p><wrap>We have serveral space launches departing daily, book your flight today!</wrap></p>
 							</div>
 						</div>
 					</div>
@@ -175,7 +175,6 @@
                             </form>
                         </div>
                     </div>
-
                 </div>
             </div>
 		</section>
